[package]
name = "vox-rs"
version = "0.1.0"
authors = ["Oguzhan YAGCI <oyagci@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.23.0"
vulkano-win = "0.23.0"
vulkano-shaders = "0.23.0"
winit = "0.24.0"
log = "0.4.14"
env_logger = "0.8.3"
cgmath = "0.18.0"
